--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.0",
+    "react-transition-group": "^2.5.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
